samples/_failures_safe/1761415346_ecd848_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc429d70.c:171: error: expected ‘;’, ‘,’ or ‘)’ at end of input
